fix: darktheme filterSubmit buttons incorrect contrast

--- a/src/core/components/FilterSummary/FilterSummary.scss
+++ b/src/core/components/FilterSummary/FilterSummary.scss
@@ -12,7 +12,7 @@
 .generic-label {
   font-size: .8rem;
   color: color-mix(in srgb, var(--alt-color3) 90%, transparent);
-  background-color: color-mix(in srgb, var(--alt-color3-contrast) 30%, transparent);
+  background-color: var(--alt-color3-contrast);
   padding: .5rem;
   border: 1px solid var(--alt-color3);
   border-radius: .4rem;
